--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,9 @@
 ################################################################################
 
 /Checkpoint3/.vs
+/Checkpoint3/Assets/AI/Cache
+/Checkpoint3/Assets/AI/Cache.meta
+/Checkpoint3/Assets/AI.meta
+/Checkpoint3/Library
+/Checkpoint3/obj
+/Checkpoint3/Temp
