MCTS being developed

--- a/Checkpoint3/Assembly-CSharp.csproj
+++ b/Checkpoint3/Assembly-CSharp.csproj
@@ -87,6 +87,9 @@
      <Compile Include="Assets\Scripts\IAJ.Unity\DecisionMaking\GOB\DepthLimitedGOAPDecisionMaking.cs" />
      <Compile Include="Assets\Scripts\IAJ.Unity\DecisionMaking\GOB\Goal.cs" />
      <Compile Include="Assets\Scripts\IAJ.Unity\DecisionMaking\GOB\WorldModel.cs" />
+     <Compile Include="Assets\Scripts\IAJ.Unity\DecisionMaking\MCTS\MCTS.cs" />
+     <Compile Include="Assets\Scripts\IAJ.Unity\DecisionMaking\MCTS\MCTSNode.cs" />
+     <Compile Include="Assets\Scripts\IAJ.Unity\DecisionMaking\MCTS\Reward.cs" />
      <Compile Include="Assets\Scripts\IAJ.Unity\Movement\DynamicMovement\DynamicArrive.cs" />
      <Compile Include="Assets\Scripts\IAJ.Unity\Movement\DynamicMovement\DynamicCharacter.cs" />
      <Compile Include="Assets\Scripts\IAJ.Unity\Movement\DynamicMovement\DynamicFollowPath.cs" />
